[package]
name = "walk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Arc"]
license = "MIT OR Apache-2.0"
description = "Graph random-walk family primitives: PageRank, Personalized PageRank, and random walk generation."
repository = "https://github.com/arclabs561/walk"
homepage = "https://github.com/arclabs561/walk"
documentation = "https://docs.rs/walk"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
rayon = { version = "1.10", optional = true }
ordered-float = "4.2"
thiserror = "2.0"
petgraph = { version = "0.6", optional = true }

[features]
default = []
serde = ["dep:serde"]
parallel = ["dep:rayon"]
petgraph = ["dep:petgraph"]

[dev-dependencies]
proptest = { workspace = true }
