[package]
name = "walk"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Arc"]
license = "MIT OR Apache-2.0"
description = "Graph random-walk family primitives: PageRank, Personalized PageRank, and random walk generation."
repository = "https://github.com/arclabs561/walk"
homepage = "https://github.com/arclabs561/walk"
documentation = "https://docs.rs/walk"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
rayon = { version = "1.10", optional = true }
ordered-float = "4.2"
thiserror = "2.0"
petgraph = { version = "0.6", optional = true }
# NOTE: this is an in-house dependency edge (kuji is the sampling substrate).
# If/when `walk` must be published standalone, switch this to a crates.io version dep.
kuji = { path = "../kuji", version = "0.1.0" }

[features]
default = []
serde = ["dep:serde"]
parallel = ["dep:rayon"]
petgraph = ["dep:petgraph"]

[dev-dependencies]
proptest = "1.9"
# NOTE: keep this repo standalone-publishable. `workspace = true` would only work
# inside the super-workspace; it would fail in an isolated GitHub checkout.
criterion = "0.7"

[[bench]]
name = "walk_ops"
harness = false
