[package]
name = "walk"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
authors = ["Arc"]
license = "MIT OR Apache-2.0"
description = "Compatibility shim: re-exports `graphops` (use `graphops` directly)."
repository = "https://github.com/arclabs561/walk"
homepage = "https://github.com/arclabs561/walk"
documentation = "https://docs.rs/walk"

[dependencies]
graphops = { path = "../graphops", version = "0.1.0", default-features = false }
rand = "0.9"
rand_chacha = "0.9"
rayon = { version = "1.10", optional = true }

[features]
default = []
serde = ["graphops/serde"]
parallel = ["graphops/parallel", "dep:rayon"]
petgraph = ["graphops/petgraph"]

[dev-dependencies]
proptest = "1.9"
criterion = "0.7"
stats_alloc = "0.1"

[[bench]]
name = "walk_ops"
harness = false
